// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`EthVault - settings fee recipient can update 1`] = `
Object {
  "calldataByteLength": 36,
  "gasUsed": 43992,
}
`;

exports[`EthVault - settings keys manager can be updated by admin 1`] = `
Object {
  "calldataByteLength": 36,
  "gasUsed": 52980,
}
`;

exports[`EthVault - settings metadata IPFS hash only admin can update 1`] = `
Object {
  "calldataByteLength": 132,
  "gasUsed": 32625,
}
`;

exports[`EthVault - settings validators root can update 1`] = `
Object {
  "calldataByteLength": 36,
  "gasUsed": 54908,
}
`;
